# Group_variable_selection_with_RFGV

./: .gitignore  .gitmodules  README.md  Script_notebook.ipynb  __init__.py  outdated_setup.py  pyproject.toml  requirements.txt  setup.cfg  setup.py  test.py  test2.py  test_unitaire.py  tree
.ipynb_checkpoints/: Script-checkpoint.ipynb  Script_notebook-Copy1-checkpoint.ipynb  Script_notebook-checkpoint.ipynb  Untitled-checkpoint.ipynb
CARTGI.egg-info/: PKG-INFO  SOURCES.txt
CARTGV/: CARTGVCriterion.c  CARTGVCriterion.cp38-win_amd64.pyd  CARTGVCriterion.html  CARTGVCriterion.pxd  CARTGVCriterion.pyx  CARTGVSplitter.c  CARTGVSplitter.cp38-win_amd64.pyd  CARTGVSplitter.html  CARTGVSplitter.pxd  CARTGVSplitter.pyx  CARTGVTree.c  CARTGVTree.cp38-win_amd64.pyd  CARTGVTree.html  CARTGVTree.pxd  CARTGVTree.pyx  CARTGVutils.c  CARTGVutils.cp38-win_amd64.pyd  CARTGVutils.html  __init__.py  setup.py  test.py
CARTGV/test/: test.py
data/: data_Mael.csv
notebook/: Script_notebook.ipynb
rfgi/: CARTGVCriterion.c  CARTGVCriterion.cp38-win_amd64.pyd  CARTGVCriterion.html  CARTGVCriterion.pxd  CARTGVCriterion.pyx  CARTGVSplitter.c  CARTGVSplitter.cp38-win_amd64.pyd  CARTGVSplitter.html  CARTGVSplitter.pxd  CARTGVSplitter.pyx  CARTGVTree.c  CARTGVTree.cp38-win_amd64.pyd  CARTGVTree.html  CARTGVTree.pxd  CARTGVTree.pyx  CARTGV_trees.py  CARTGVutils.c  CARTGVutils.cp38-win_amd64.pyd  RFGV.py  __init__.py  setup.py
src/: __init__.py
test/: Test_python_packaging.py  cartgvtree_size.txt  script.py  test.py  test2.py  test_predict_score.py  test_unitaire.py  test_unitaire2.py
(+61 files in other folders)
