[metadata]
name = rfgi
version = 0.0.1
author = "Maël Le Gal, Audrey Poterie, Charlotte Pelletier"
author_email = "mael.legal@live.fr"
description = Random Forest for Grouped Inputs
long_description = file: README.md
url = https://github.com/apoterie/Group_variable_selection_with_RFGV
licence = MIT

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7

[options.packages.find]
where = src
